Finished Login Page

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
 
 <body style="font-family: 'Montserrat', sans-serif !important;">
   <div id="root"></div>
+  <style>
+    .border-error {
+      border-color: #AC3E31 !important;
+    }
+  </style>
 </body>
 <script src="%PUBLIC_URL%/electron.js"></script>
 
