Change design font

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <title>eNotebook</title>
 </head>
 
-<body style="font-family: 'Montserrat', sans-serif !important;">
+<body style="font-family: 'Open Sans', sans-serif;">
   <div id="root"></div>
   <style>
     .border-error {
